Refining messages and exception messages.

--- a/src/main/resources/i18n/messages/messages.properties
+++ b/src/main/resources/i18n/messages/messages.properties
@@ -1,1 +1,1 @@
-card.cardholderName.notBlank=Cardholder cannot be blank
+card.application.accepted=Your card application has been accepted and will be processed now
