--- a/src/main/resources/i18n/exceptions/exceptions_pt_BR.properties
+++ b/src/main/resources/i18n/exceptions/exceptions_pt_BR.properties
@@ -1,6 +1,4 @@
-card.cardholderName.notBlank=O nome do portador do cartão é obrigatório
-card.cardholderName.length.limit=O nome do portador do cartao nao pode conter mais que 21 caracteres.
-
-card.dailyWithdrawalLimit.negative=O limite diario de saque nao pode ser negativo
+card.cardholderName.notBlank=O nome do titular do cartão não pode ficar em branco
+card.cardholderName.length.limit=O nome do titular do cartão não pode ter mais de 21 caracteres
 
 card.notFound=Nenhum cartão foi encontrado com id: {0}
