Adding a message to be returned in the card application has been accepted

--- a/src/main/resources/i18n/messages/messages.properties
+++ b/src/main/resources/i18n/messages/messages.properties
@@ -1,1 +1,1 @@
-card.application.accepted=Your card application has been accepted and will be processed now
+card.application.accepted=Your card application has been accepted and will be processed soon
