--- a/src/main/resources/i18n/messages/messages_pt_BR.properties
+++ b/src/main/resources/i18n/messages/messages_pt_BR.properties
@@ -1,1 +1,1 @@
-card.application.accepted=A solicitação do seu cartão foi aceita e será processada agora
+card.application.accepted=A solicitação do seu cartão foi aceita e será processada em breve
