Migrating project from spring boot to micronaut 3

--- a/src/main/resources/i18n/exceptions/exceptions_en_GB.properties
+++ b/src/main/resources/i18n/exceptions/exceptions_en_GB.properties
@@ -1,1 +1,4 @@
 card.notFound=No card has been found with id: {0}
+card.cardholderName.notBlank=Cardholder name can neither be null nor empty
+card.cardholderName.length.limit=Cardholder cannot be longer than 21 characters
+card.accountHolderIBAN.notBlank=Account holder iban can neither be null nor empty
