--- a/src/main/resources/i18n/exceptions/exceptions.properties
+++ b/src/main/resources/i18n/exceptions/exceptions.properties
@@ -1,1 +1,5 @@
 card.notFound=No card has been found with id: {0}
+card.cardholderName.notBlank=Cardholder name can neither be null nor empty
+card.cardholderName.length.limit=Cardholder cannot be longer than 21 characters
+card.bankAccountId.notNull=Bank account id can not be null
+card.bankAccountId.positive=Bank account id can neither be negative nor zero
